index.css
body {
  margin: 0vw;
  font-family: 'Nunito', sans-serif;
}

.container {
  display: flex;
  flex-wrap: wrap;
  height: 96.5vh;
}

/* ------------------- Menu/Navigation Bar ------------------------ */

.menu {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  border: 1px solid #737373;
  height: 35px;
}
.dropbtn {
  color: black;
  background-color: white;
  font-size: 16px;
  border: none;
  cursor: pointer;
  padding:8px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  right: 0;
  background-color: white;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {background-color: #6d6d6d;}
.dropdown:hover .dropdown-content {display: block;}
.dropdown:hover .dropbtn {background-color: #6b6b6b;}

/* -------------------------------------------------------------- */

/* -------------------- Container 2 (Message & Graph) --------------------- */

.container2 {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  flex-direction: row;
  height: 100%;
  flex: 1 0 65%;
  order: 1;
}

    /* -------------------- Graph Display Area --------------------- */

    .container2 > .graph-display {
      flex-direction: row;
      justify-content: flex-start;
      border: 1px solid #737373;
      order: 1;
      flex: 1 0 65%;  /*  flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ] */
      height:60%;
    }

    /* -------------------------------------------------------------- */
  
    /* -------------------- Message Area --------------------- */

    .container2 > .message {
      flex-direction: row;
      justify-content: flex-start;
      border: 1px solid #737373;
      order: 2;
      flex: 1 0 65%;  /*  flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ] */
      height: 40%;
    }

    /* -------------------------------------------------------------- */

/* ------------------ End of Container 2 ------------------------------*/

/* -------------------- Data Selection Area --------------------- */

.container > .data-selection {
  flex-direction: column;
  border: 1px solid #737373;
  order: 2;
  flex: 1 0 34%;
  height: 100%;
}

/* -------------------------------------------------------------- */

